unpackaged/main/default/objects/adobesign__Document_Job_Status__c/adobesign__Document_Job_Status__c.object-meta.xml
<CustomObject>
    <label>Document Job Status</label>
    <nameField>
        <displayFormat>S-{0}</displayFormat>
        <label>Document Job Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Job Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>