unpackaged/main/default/objects/adobesign__Document_Job_Status__c/fields/adobesign__Cpf_Status__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Cpf_Status__c</fullName>
    <description>Status code returned by internal service</description>
    <inlineHelpText>Status code returned by internal service</inlineHelpText>
    <label>Cpf Status</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>