unpackaged/main/default/objects/adobesign__Document_Job_Status__c/fields/adobesign__Document__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Document__c</fullName>
    <description>Parent Document Id</description>
    <inlineHelpText>Parent Document Id</inlineHelpText>
    <label>Document</label>
    <referenceTo>adobesign__Document__c</referenceTo>
    <relationshipName>Document_Job_Status</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>