unpackaged/main/default/objects/adobesign__Document_Job_Status__c/fields/adobesign__Error_Code__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Error_Code__c</fullName>
    <description>job error code</description>
    <inlineHelpText>job error code</inlineHelpText>
    <label>Error Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>