unpackaged/main/default/objects/adobesign__Document_Job_Status__c/fields/adobesign__Location__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Location__c</fullName>
    <description>The URL to poll or refetch for final output content. Use this as the endpoint for the GET API call.</description>
    <inlineHelpText>The URL to poll or refetch for final output content. Use this as the endpoint for the GET API call.</inlineHelpText>
    <label>Location</label>
    <type>Url</type>
</CustomField>